# Insightor

./: .env.example  .gitignore  .insightor.example.yml  .vscodeignore  EXECUTION_REPORT.md  PRODUCT.md  PROJECT_COMPLETION_SUMMARY.md  README.md  TASK_COMPLETE.md  insightor-0.1.0.vsix  insightor-0.1.1.vsix  insightor-full-review-4.md  insightor-full-review-9.md  insightor-review-9.md  main.py  package-lock.json  package.json  pyproject.toml  report.md  requirements.txt  test_review.md  vscode-plugin-test.md
ai_reviewer/: README.md  __init__.py  ai_engine.py  context_builder.py  github_commenter.py  prompts.py  reviewer.py  test_api.py
deploy/: README.md  insightor-api.service  setup.sh  setup_https.sh  setup_local.sh
docs/: aider-context-integration.md  architecture-final.md  pr-submission-guidelines.en-US.md  pr-submission-guidelines.zh-CN.md  reviewdog-architecture-analysis.md
fetch_pr/: .env.example  fetch_pr.py
insightor/: __init__.py  __main__.py  cli.py  pipeline.py
scripts/: describe.py  improve.py  publish.py  review.py  risks.py  test_ai.py  test_processing.py  test_review.py
src/: config.ts  extension.ts  prReviewer.ts  pythonRunner.ts
tests/: test_ai_handler.py  test_buildinfo.py  test_cli.py  test_config_loader.py  test_feedback.py  test_file_filter.py  test_github_provider.py  test_output.py  test_pipeline.py  test_processing.py  test_prompt_parser.py  test_schemas_urf.py
vscode-extension/: CHANGELOG.md  COMPLETION_REPORT.md  DEBUG_INSTRUCTIONS.md  DELIVERY_CHECKLIST.md  DELIVERY_REPORT.md  DEMO.md  DEVELOPMENT.md  FINAL_SUMMARY.md  INDEX.md  INSTALL.md  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_5MIN.md  README.md  START_HERE.md  STRUCTURE.md  TEST_REPORT.md  package.json  (+3 more)
(+82 files in other folders)
