[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insightor"
version = "0.1.0"
description = "AI-powered PR review assistant that helps developers improve code review efficiency and quality"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Insightor Team"},
]
keywords = ["code-review", "ai", "pull-request", "github", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "click>=8.0",
    "rich>=13.0",
    "litellm>=1.0",
    "anthropic>=0.30",
    "PyGithub>=2.0",
    "jinja2>=3.0",
    "tiktoken>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.3",
]
aider-context = [
    "tree-sitter>=0.23",
    "networkx>=3.0",
    "diskcache>=5.0",
]
web = [
    "fastapi>=0.100",
    "uvicorn>=0.30",
    "sse-starlette>=1.0",
]

[project.scripts]
insightor = "insightor.cli:main"

[project.urls]
Homepage = "https://github.com/qyw23AI/Insightor"
Repository = "https://github.com/qyw23AI/Insightor.git"

[tool.hatch.build.targets.wheel]
packages = ["insightor"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
